syntax = "proto3";

option go_package = "pkg/api/pb";

package pb;

message RectRequest {
    float height = 1;
    float width = 2;
}

message AreaResponse {
    float result = 1;
}

message PermiterResponse {
    float result = 1;
}

service GeometryService {
    rpc Area (RectRequest) returns (AreaResponse); 
    rpc Perimeter (RectRequest) returns (PermiterResponse);
}